# RetroProject

./: .gitignore  README.md  jp_base_dir.m  jp_calc_mu_rate.m  jp_calc_rip_trig_mu_rate.m  jp_detect_ripples.m  jp_load_adt_data.m  jp_load_eeg.m  jp_load_epoch.m  jp_load_hpc_data.m  jp_load_multiunit.m  jp_load_region_data.m  jp_load_rsx_data.m  jp_load_tt_anatomy.m  jp_sandbox.m  projectToRats.txt  sleep.bib  template.bib  thesisTimeline.md  theta.bib  todo.org
LabNotebook/: 2013-10-24.txt  2013-11-15.txt  2013_03_16.txt  2013_03_19.txt  2013_03_20.txt  2013_03_22.txt  ToDo.md
arte/: Makefile  arte.bbl  arte.blg  arte.md  arte.tex  arte_experience.tex  arte_experience_outline.md  metadata.yaml  plos2009.bst  template.bib
awake_dips/: awake-dips.md  outline.html  outline.md  render.sh  title.md
bursts/: #outline#  outline.md
otherDocuments/: .#thesisOutline.org  Makefile  background.bib  greg.org  minutes.md  preamble.tex  preamble.txt  render.hs  thesis.org  thesisOutline.md  thesisOutline.org
others_analysis_code/: hgt_20120915.patch
sleep_bursts/: ToDo.md  sleepbursts.tex  todo.md
thesis/: Makefile  abstract.md  defense.md  defense.org  figureNotes.org  greg.org  preamble.tex  render.hs  revealTemplate.html  slides.css  (+6 more)
traveling/figures/: Model.hs  ModelTypes.hs  figures.cabal
traveling/figures/exec/: Test.hs
traveling/figures/precession-model/: Model.hs  cabal.sandbox.config  precession-model.cabal
traveling/figures/precession-model/Model/: DefaultValues.hs  Gloss.hs  ModelTypes.hs
traveling/figures/precession-model/exec/: Interact.hs
(+278 files in other folders)
