Name: figures
Version: 0.4.2
License: BSD3
License-File: LICENSE
Copyright: (c) 2013 Greg Hale
Author: Greg Hale
Maintainer: Greg Hale <imalsogreg@gmail.com>
Stability: Experimental
Homepage: http://github.com/ImAlsoGreg/pipes-rt
Bug-Reports: http://github.com/ImAlsoGreg/pipes-rt/issues
Category: Control, Pipes
Build-Type: Simple
Synopsis: A few pipes to control the timing of yields
Cabal-Version: >=1.8
Extra-Source-Files: README.md
Description:
  Use this library to yield values downstream according to different timing rules. For example, use the relTimeCat pipe, and your data will be yielded according to their timestamps. Or use poissonCat to yield values with poisson timing.

Source-Repository head
  Type: git
  Location: git://github.com/ImAlsoGreg/pipes-rt

Library
  Hs-Source-Dirs: .
  Build-Depends:
    base (>= 4.2 && < 4.8)
   ,pipes (>= 4 && < 4.2)
   ,time (>= 1.4 && < 1.5)
   ,mwc-random (>= 0.13 && < 0.14)
  Exposed-Modules:
    Model, ModelTypes

Executable Test
  Hs-Source-Dirs: . exec
  Other-Modules: Model, ModelTypes
  Build-Depends: base
  Main-Is: Test.hs